# Lab01_PART2_18135122

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
sql/: queries.sql  schema.sql
src/: bronze.py  config.py  db.py  download_data.py  gold.py  silver.py  spark_session.py  validate.py
